force-app/main/default/objects/Trust_Coordinator_Assignment__c/Trust_Coordinator_Assignment__c.object-meta.xml
<CustomObject>
    <label>Trust Coordinator Assignment</label>
    <nameField>
        <displayFormat>TCA-{000000}</displayFormat>
        <label>Trust Coordinator Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trust Coordinator Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>