force-app/main/default/objects/Trust_Coordinator_Assignment__c/fields/Trust_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Trust_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trust Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trust_Coordinator_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>