force-app/main/default/objects/Trust_Coordinator_Assignment__c/fields/X18_Digit_Trust_Coordinator_Assignment_I__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Trust_Coordinator_Assignment_I__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Trust Coordinator Assignment ID</label>
    <type>Text</type>
</CustomField>