force-app/main/default/objects/Trust_Coordinator_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Last_Name_First_Initial__c</columns>
    <columns>Trust_Coordinator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>